<resources>
    <string name="app_name">CashM4-MONEY,UC,DIAMONDS,CP,RECHARGE, PROMOTIONS
</string>

    <style name="CircularDeterminateProgressBar">
        <item name="android:indeterminateOnly">false</item>
        <item name="android:progressDrawable">@drawable/circle</item>
    </style>

    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="fri">My friends</string>
    <string name="order">My order</string>
    <string name="how">How to use CashM4?</string>
    <string name="tru">Trusted By</string>
    <string name="in">In partnership with</string>
    <string name="rate">Rate us</string>

    <string name="help">Help</string>
    <string name="socialmedia">CashM4 social pages</string>
    <string name="con">Contact</string>
    <string name="req">Request new feature</string>
    <string name="Up">Upcoming CashM4 features</string>
    <string name="gli">Report a Glitch/Bug</string>
    <string name="i">I do not like ____ in CashM4</string>
    <string name="hate">About us</string>
    <string name="app_id_ads">ca-app-pub-3940256099942544~3347511713</string>
    <string name="bonus_gold_coins"><![CDATA[Bonus Gold Coins____]]></string>
    <string name="discount_coupon"><![CDATA[Discount Coupon_____]]></string>
    <string name="no_erf_coupon"><![CDATA[No ERF Coupon_______]]></string>
    <string name="why">Why to convert?</string>
</resources>